--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	background-color: rgb(182, 182, 182);
+}
+
 .outer {
 	display: flex;
 	flex-direction: column;
@@ -9,17 +13,26 @@
 }
 
 .cell {
-	margin: 10px;
-	background-color: darkkhaki;
+	margin: 2px;
+	/* background-color: rgb(108, 153, 153); */
 	display: block;
-	width: 5vw;
-	height: 5vw;
+	width: 4vw;
+	height: 4vw;
 	display: flex;
   justify-content: center;
   align-content: center;
   align-items: center;
+	transition: background-color 0.5s ease-out, border 0.25s ease-out;
+	box-sizing: border-box;
+	border: 3px solid grey;
+	opacity: 0.75;
+	box-shadow: 2px 2px 2px rgba(128, 128, 128, 0.385);
 }
 
+.cell.player::before {
+	content: "Player";
+}
 .cell.player {
-	background-color: green;
+	background-color: rgb(0, 168, 45);
+	border: 4px solid black;
 }
