--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
 .outer {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	margin-top: 10vh;
 }
 
 .row {
@@ -13,8 +15,8 @@ body {
 }
 
 .cell {
-	margin: 2px;
-	/* background-color: rgb(108, 153, 153); */
+	margin: 4px;
+	background-color: rgb(197, 197, 197);
 	display: block;
 	width: 4vw;
 	height: 4vw;
@@ -22,17 +24,23 @@ body {
   justify-content: center;
   align-content: center;
   align-items: center;
-	transition: background-color 0.5s ease-out, border 0.25s ease-out;
+	transition: background-color 0.4s ease-in, border 0.35s ease-in;
 	box-sizing: border-box;
-	border: 3px solid grey;
-	opacity: 0.75;
-	box-shadow: 2px 2px 2px rgba(128, 128, 128, 0.385);
+	border: 2px solid rgb(214, 214, 214);
+	box-shadow: 5px 5px 2px 2px #586e7411;
+}
+
+@keyframes fade {
+	0% { opacity: 0.1; }
+	100% { opacity: 1; }
 }
 
 .cell.player::before {
 	content: "Player";
+	animation: fade 0.45s ease-in;
 }
 .cell.player {
-	background-color: rgb(0, 168, 45);
+	background-color: rgb(0, 134, 168);
 	border: 4px solid black;
+	opacity: 1;
 }
