--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
 	background-color: rgb(182, 182, 182);
+	font-family: sans-serif;
+	font-weight: 500;
 }
 
 .outer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 10vh;
 }
 
 .row {
@@ -20,14 +21,18 @@ body {
 	display: block;
 	width: 4vw;
 	height: 4vw;
+	flex-grow: 1;
 	display: flex;
   justify-content: center;
   align-content: center;
   align-items: center;
-	transition: background-color 0.4s ease-in, border 0.35s ease-in;
 	box-sizing: border-box;
 	border: 2px solid rgb(214, 214, 214);
 	box-shadow: 5px 5px 2px 2px #586e7411;
+}
+
+.cell:not(.zombie) {
+	transition: background-color 0.4s ease-out, border 0.3s ease-in;
 }
 
 @keyframes fade {
@@ -37,10 +42,20 @@ body {
 
 .cell.player::before {
 	content: "Player";
-	animation: fade 0.45s ease-in;
+	animation: fade 0.5s ease-in;
 }
 .cell.player {
 	background-color: rgb(0, 134, 168);
+	border: 4px solid black;
+	opacity: 1;
+}
+
+.cell.zombie::before {
+	content: "Zombie";
+	animation: fade 0.5s ease-in;
+}
+.cell.zombie {
+	background-color: rgb(168, 34, 0);
 	border: 4px solid black;
 	opacity: 1;
 }
