--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 	background-color: rgb(182, 182, 182);
 	font-family: sans-serif;
 	font-weight: 500;
+	font-size: 10px;
 }
 
 .outer {
@@ -58,4 +59,12 @@ body {
 	background-color: rgb(168, 34, 0);
 	border: 4px solid black;
 	opacity: 1;
+}
+
+.cell.egg {
+	background-color: yellow;
+}
+
+.both {
+	background-color: black;
 }
