--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-	--width: min(97vh, 40vw);
+	--width: min(min(90vw, 90vh), 1000px);
 }
 
 body {
@@ -7,6 +7,26 @@ body {
 	font-family: sans-serif;
 	font-weight: 500;
 	font-size: 10px;
+}
+
+.game-over {
+	background-color: rgba(171, 82, 82, 0.757);
+	transition: background-color 2s;
+}
+
+h1 {
+	font-size: 30px;
+}
+
+button {
+	font-size: 30px;
+	background-color: rgb(255, 110, 110);
+	text-decoration: none;
+	border: none;
+	padding: 8px;
+	border-radius: 5px;
+	border: 1px darkred solid;
+	cursor: pointer;
 }
 
 
@@ -40,7 +60,7 @@ body {
 }
 
 .cell:not(.zombie) {
-	transition: background-color 0.4s ease-out, border 0.3s ease-in;
+	transition: background-color 0.2s ease-out, border 0.15s ease-in;
 }
 
 @keyframes fade {
@@ -50,7 +70,7 @@ body {
 
 .cell.player::before {
 	content: "Player";
-	animation: fade 0.5s ease-in;
+	animation: fade 0.35s ease-in;
 }
 .cell.player {
 	background-color: rgb(0, 134, 168);
@@ -60,7 +80,7 @@ body {
 
 .cell.zombie::before {
 	content: "Zombie";
-	animation: fade 0.5s ease-in;
+	animation: fade 0.35s ease-in;
 }
 .cell.zombie {
 	background-color: rgb(168, 34, 0);
