--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-	--width: min(min(90vw, 90vh), 1000px);
+	--width: min(min(90vw, max(90vh, 600px)), 1000px);
 }
 
 body {
@@ -7,11 +7,11 @@ body {
 	font-family: sans-serif;
 	font-weight: 500;
 	font-size: 10px;
+	transition: background-color 3s;
 }
 
 .game-over {
 	background-color: rgba(171, 82, 82, 0.757);
-	transition: background-color 2s;
 }
 
 h1 {
@@ -59,39 +59,37 @@ button {
 	box-shadow: 5px 5px 2px 2px #586e7411;
 }
 
-.cell:not(.zombie) {
-	transition: background-color 0.2s ease-out, border 0.15s ease-in;
+.cell:not(.player) {
+	/* transition: all 0.5s; */
 }
+
 
 @keyframes fade {
 	0% { opacity: 0.1; }
 	100% { opacity: 1; }
 }
 
-.cell.player::before {
-	content: "Player";
-	animation: fade 0.35s ease-in;
-}
 .cell.player {
 	background-color: rgb(0, 134, 168);
 	border: 4px solid black;
 	opacity: 1;
+	background-image: url("/smiley-player.png");
+	background-size: contain;
 }
 
-.cell.zombie::before {
-	content: "Zombie";
-	animation: fade 0.35s ease-in;
-}
 .cell.zombie {
-	background-color: rgb(168, 34, 0);
+	background-color: rgb(219, 149, 143);
 	border: 4px solid black;
 	box-sizing: border-box;
 	opacity: 1;
-	padding: 0;
+	background-image: url("/smiley-box.png");
+	background-size: contain;
 }
 
 .cell.egg {
-	background-color: yellow;
+background: #FAE5C0;
+display: block;
+border-radius: 50% 60% 50% 50% / 70% 70% 40% 40%;
 }
 
 .both {
