--- a/style.css
+++ b/style.css
@@ -1,121 +1,134 @@
 :root {
-	--width: min(min(90vw, max(90vh, 600px)), 1000px);
+  --width: min(min(90vw, max(90vh, 600px)), 1000px);
 }
 
 body {
-	background-color: rgb(182, 182, 182);
-	font-family: sans-serif;
-	font-weight: 500;
-	font-size: 10px;
-	transition: background-color 3s;
+  background-color: rgb(182, 182, 182);
+  font-family: sans-serif;
+  font-weight: 500;
+  font-size: 10px;
+  transition: background-color 3s;
 }
 
 .game-over {
-	background-color: rgba(171, 82, 82, 0.757);
+  background-color: rgba(171, 82, 82, 0.757);
 }
 
 h1 {
-	font-size: 30px;
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 20px;
 }
 
 button {
-	font-size: 30px;
-	background-color: rgb(255, 110, 110);
-	text-decoration: none;
-	border: none;
-	padding: 8px;
-	border-radius: 5px;
-	border: 1px darkred solid;
-	cursor: pointer;
+  font-size: 30px;
+  background-color: rgb(255, 110, 110);
+  text-decoration: none;
+  border: none;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px darkred solid;
+  cursor: pointer;
 }
 
-
 .outer {
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
-	height: var(--width);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  height: var(--width);
 }
 
 .row {
-	display: flex;
-	flex-direction: row;
-	flex-basis: 100%;
-	align-items: stretch;
-	width: var(--width);
+  display: flex;
+  flex-direction: row;
+  flex-basis: 100%;
+  align-items: stretch;
+  width: var(--width);
 }
 
 .cell {
-	margin: 4px;
-	background-color: rgb(197, 197, 197);
-	display: block;
-	display: flex;
-	flex-basis: 100%;
+  margin: 4px;
+  background-color: rgb(197, 197, 197);
+  display: flex;
+  flex-basis: 100%;
   justify-content: center;
   align-content: center;
   align-items: center;
-	box-sizing: border-box;
-	border: 4px solid rgb(214, 214, 214);
-	box-shadow: 5px 5px 2px 2px #586e7411;
+  box-sizing: border-box;
+  border: 4px solid rgb(214, 214, 214);
+  box-shadow: 5px 5px 2px 2px #586e7411;
 }
-
-.cell:not(.player) {
-	/* transition: all 0.5s; */
-}
-
 
 @keyframes fade {
-	0% { opacity: 0.1; }
-	100% { opacity: 1; }
+  0% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .cell.player {
-	background-color: rgb(0, 134, 168);
-	border: 4px solid black;
-	opacity: 1;
-	background-image: url("/smiley-player.png");
-	background-size: contain;
+  background-color: rgb(0, 134, 168);
+  border: 4px solid black;
+  opacity: 1;
+  background-image: url("/smiley-player.png");
+  background-size: contain;
 }
 
 .cell.zombie {
-	background-color: rgb(219, 149, 143);
-	border: 4px solid black;
-	box-sizing: border-box;
-	opacity: 1;
-	background-image: url("/smiley-box.png");
-	background-size: contain;
+  background-color: rgb(219, 149, 143);
+  border: 4px solid black;
+  box-sizing: border-box;
+  opacity: 1;
+  background-image: url("/smiley-box.png");
+  background-size: contain;
+}
+
+.cell.egg::before {
+  content: attr(data-meta);
+  font-size: 24px;
+	font-weight: 700;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: calc(50% - 24px / 2);
+	opacity: 0.5;
 }
 
 .cell.egg {
-background: #FAE5C0;
-display: block;
-border-radius: 50% 60% 50% 50% / 70% 70% 40% 40%;
+  background: #fae5c0;
+  display: block;
+  position: relative;
+  border-radius: 50% 60% 50% 50% / 70% 70% 40% 40%;
 }
 
 .both {
-	background-color: black;
+  background-color: black;
 }
 
 body {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: var(--width);
-	margin: auto;
-	overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: var(--width);
+  margin: auto;
+  overflow: hidden;
 }
 
 .score-container {
-	display: flex;
-	width: 100%;
-	justify-content: space-between;
-	padding: 0 5px;
-	margin-bottom: -5px;
-	box-sizing: border-box;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0 5px;
+  margin-bottom: -5px;
+  box-sizing: border-box;
 }
