--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ button {
   background-color: rgb(0, 134, 168);
   border: 4px solid black;
   opacity: 1;
-  background-image: url("/smiley-player.png");
+  background-image: url("images/smiley-player.png");
   background-size: contain;
 }
 
@@ -78,7 +78,7 @@ button {
   border: 4px solid black;
   box-sizing: border-box;
   opacity: 1;
-  background-image: url("/smiley-box.png");
+  background-image: url("images/smiley-box.png");
   background-size: contain;
 }
 
